[gd_scene load_steps=12 format=2]

[ext_resource path="res://player/attack/attack.gd" type="Script" id=1]
[ext_resource path="res://player/attack/attack_00.png" type="Texture" id=2]
[ext_resource path="res://player/attack/attack_01.png" type="Texture" id=3]
[ext_resource path="res://player/attack/attack_02.png" type="Texture" id=4]
[ext_resource path="res://player/attack/attack_03.png" type="Texture" id=5]
[ext_resource path="res://player/attack/attack_04.png" type="Texture" id=6]
[ext_resource path="res://player/attack/attack_05.png" type="Texture" id=7]
[ext_resource path="res://player/attack/attack_06.png" type="Texture" id=8]
[ext_resource path="res://player/attack/attack_07.png" type="Texture" id=9]
[ext_resource path="res://hitbox.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 42.5, 40 )

[node name="attack" type="Node2D"]

script = ExtResource( 1 )

[node name="sprite1" type="Sprite" parent="." index="0"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="sprite2" type="Sprite" parent="." index="1"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite3" type="Sprite" parent="." index="2"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="sprite4" type="Sprite" parent="." index="3"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="sprite5" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="sprite6" type="Sprite" parent="." index="5"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="sprite7" type="Sprite" parent="." index="6"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 8 )
_sections_unfolded = [ "Transform" ]

[node name="sprite8" type="Sprite" parent="." index="7"]

visible = false
position = Vector2( -5, -50 )
scale = Vector2( 5, 5 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="hitbox" type="Area2D" parent="." index="8"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 28
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 10 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox" index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="tween" type="Tween" parent="." index="9"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0


